Update to fix horizontal scroll

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -118,7 +118,7 @@ body, html {
   border: 0;
   filter: alpha;
   /* background-color: rgba(15,15,15,0.4); */
-  width: 200%;
+  width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
